# algebra

./: Cargo.toml  README.md  lib.rs
elliptic_curve/: Cargo.toml
elliptic_curve/examples/: test_ecdsa.rs  test_secp256k1.rs
elliptic_curve/src/: ecdsa.rs  lib.rs  main.rs  point.rs  secp256k1.rs
feige_fiat_shamir/: Cargo.toml
feige_fiat_shamir/src/: main.rs  prover.rs  verifier.rs
fiat_shamir/: Cargo.toml
fiat_shamir/src/: main.rs
finite-field/: Cargo.toml
finite-field/src/: lib.rs  main.rs
finite_field/: Cargo.toml
finite_field/examples/: test_prime_field.rs
finite_field/src/: ff.rs  helper.rs  lib.rs  prime_field.rs
kzg/: Cargo.toml
kzg/src/: kzg.rs  main.rs  polynomial.rs
sum_check_protocol/: Cargo.toml  README.md
sum_check_protocol/src/: helper.rs  main.rs  prover.rs  verifier.rs
test_ecc/: Cargo.toml
test_ecc/src/: main.rs
test_ecdsa/: Cargo.toml
test_prime_field/: Cargo.toml
test_prime_field/src/: main.rs
verkle_trees/: Cargo.toml
